--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
         "fleetbase-extension",
         "fleetbase",
         "ember-addon",
-        "ember-engine",
-        ""
+        "ember-engine"
     ],
     "fleetbase": {
         "route": "vendors-for-suppliers"
     },
-    "repository": "https://github.com/fleetbase/starter-extension",
+    "repository": "https://github.com/johhann/fleetbase-vendor-for-suppliers.git",
     "license": "AGPL-3.0-or-later",
     "author": "johhann <johannesm1219@gmail.com>",
     "directories": {
@@ -38,65 +37,66 @@
         "publish:github": "npm config set '@fleetbase:registry' https://npm.pkg.github.com/ && npm publish"
     },
     "dependencies": {
-        "@fleetbase/ember-core": "^0.2.21",
-        "@fleetbase/ember-ui": "^0.2.34",
+        "@babel/core": "^7.27.4",
+        "@fleetbase/ember-core": "^0.2.23",
+        "@fleetbase/ember-ui": "^0.2.38",
         "@fortawesome/ember-fontawesome": "^2.0.0",
         "@fortawesome/fontawesome-svg-core": "6.4.0",
-        "@fortawesome/free-solid-svg-icons": "6.4.0",
         "@fortawesome/free-brands-svg-icons": "6.4.0",
-        "@babel/core": "^7.23.2",
+        "@fortawesome/free-solid-svg-icons": "6.4.0",
         "broccoli-funnel": "^3.0.8",
-        "ember-auto-import": "^2.7.4",
+        "ember-auto-import": "^2.10.0",
         "ember-cli-babel": "^8.2.0",
         "ember-cli-htmlbars": "^6.3.0",
         "ember-intl": "6.3.2",
-        "ember-radio-button": "^3.0.0-beta.1",
-        "ember-wormhole": "^0.6.0"
+        "ember-radio-button": "3.0.0-beta.1",
+        "ember-wormhole": "^0.6.0",
+        "jsqr": "^1.4.0"
     },
     "devDependencies": {
-        "@babel/eslint-parser": "^7.22.15",
-        "@babel/plugin-proposal-decorators": "^7.23.2",
-        "@ember/optional-features": "^2.0.0",
-        "@ember/test-helpers": "^3.2.0",
-        "@embroider/test-setup": "^3.0.2",
+        "@babel/eslint-parser": "^7.27.5",
+        "@babel/plugin-proposal-decorators": "^7.27.1",
+        "@ember/optional-features": "^2.2.0",
+        "@ember/test-helpers": "^3.3.1",
+        "@embroider/test-setup": "^3.0.3",
         "@glimmer/component": "^1.1.2",
         "@glimmer/tracking": "^1.1.2",
         "broccoli-asset-rev": "^3.0.0",
         "concurrently": "^8.2.2",
-        "ember-cli": "~5.4.1",
+        "ember-cli": "~5.4.2",
         "ember-cli-clean-css": "^3.0.0",
-        "ember-cli-dependency-checker": "^3.3.2",
+        "ember-cli-dependency-checker": "^3.3.3",
         "ember-cli-inject-live-reload": "^2.1.0",
         "ember-cli-sri": "^2.1.1",
         "ember-cli-terser": "^4.0.2",
         "ember-composable-helpers": "^5.0.0",
         "ember-concurrency": "^3.1.1",
         "ember-concurrency-decorators": "^2.0.3",
-        "ember-data": "^4.12.5",
+        "ember-data": "^4.12.8",
         "ember-engines": "^0.9.0",
         "ember-load-initializers": "^2.1.2",
-        "ember-math-helpers": "^4.0.0",
-        "ember-page-title": "^8.0.0",
-        "ember-qunit": "^8.0.1",
+        "ember-math-helpers": "^4.2.1",
+        "ember-page-title": "^8.2.4",
+        "ember-qunit": "^8.1.1",
         "ember-resolver": "^11.0.1",
-        "ember-source": "~5.4.0",
+        "ember-source": "~5.4.1",
         "ember-source-channel-url": "^3.0.0",
-        "ember-template-lint": "^5.11.2",
+        "ember-template-lint": "^5.13.0",
         "ember-try": "^3.0.0",
-        "eslint": "^8.52.0",
-        "eslint-config-prettier": "^9.0.0",
-        "eslint-plugin-ember": "^11.11.1",
-        "eslint-plugin-n": "^16.2.0",
-        "eslint-plugin-prettier": "^5.0.1",
-        "eslint-plugin-qunit": "^8.0.1",
+        "eslint": "^8.57.1",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-ember": "^11.12.0",
+        "eslint-plugin-n": "^16.6.2",
+        "eslint-plugin-prettier": "^5.4.1",
+        "eslint-plugin-qunit": "^8.1.2",
         "loader.js": "^4.7.0",
-        "prettier": "^3.0.3",
-        "qunit": "^2.20.0",
+        "prettier": "^3.5.3",
+        "qunit": "^2.24.1",
         "qunit-dom": "^2.0.0",
         "stylelint": "^15.11.0",
         "stylelint-config-standard": "^34.0.0",
-        "stylelint-prettier": "^4.0.2",
-        "webpack": "^5.89.0"
+        "stylelint-prettier": "^4.1.0",
+        "webpack": "^5.99.9"
     },
     "peerDependencies": {
         "ember-engines": "^0.9.0"
@@ -124,6 +124,9 @@
                 }
             }
         ]
+    },
+    "publishConfig": {
+        "access": "public"
     },
     "packageManager": "pnpm@10.11.1+sha512.e519b9f7639869dc8d5c3c5dfef73b3f091094b0a006d7317353c72b124e80e1afd429732e28705ad6bfa1ee879c1fce46c128ccebd3192101f43dd67c667912"
 }
