--- a/.github/workflows/ember.yml
+++ b/.github/workflows/ember.yml
@@ -90,7 +90,7 @@ jobs:
       - name: Configure npm for GitHub registry
         run: |
           echo "@fleetbase:registry=https://npm.pkg.github.com/" >> ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> ~/.npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GIT_TOKEN }}" >> ~/.npmrc
 
       - name: Publish to GitHub registry
         run: npm publish
